# VideoProcessorProject

./: CMakeLists.txt  README.md
include/: matToBytes.hpp
include/Frame/: Frame.hpp  MatFrame.hpp
include/VideoProcessor/: VideoProcessor.hpp
python/: cpp.py
src/: bindings.cpp  matToBytes.cpp
src/Frame/: Frame.cpp  MatFrame.cpp
src/VideoProcessor/: VideoProcessor.cpp
